sgd/reproduction/playground/objects/SVMXC__Site__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Site is a unique location and is identified by a name and address. Site information is especially beneficial in service scenarios when accurate information about the physical location of a product is crucial to the timely delivery of service. ServiceMax also uses site to track warehouse and field inventory locations.</description>
    <fields>
        <fullName>SMAX_PS_Full_Location_Name__c</fullName>
        <formula>IF(OR(ISNULL( SVMXC__Parent__c ), ISBLANK(SVMXC__Parent__c)), 
 SVMXC__Account__r.Name + &quot; → &quot; + Name, 
 SVMXC__Account__r.Name + &quot; → &quot; + SVMXC__Parent__r.Name + &quot; → &quot; + Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>フル場所名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location_Notes__c</fullName>
        <label>設置場所メモ</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ParentAccount__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; SVMXC__Account__c,SVMXC__Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not in Use 取引先</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to which this site belongs to. Note that you can maintain your own organization’s locations in which case you will create an Account record for your account.</description>
        <inlineHelpText>The company to which this site belongs to. Note that you can maintain your own organization’s locations in which case you will create an Account record for your company</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the site’s address</description>
        <inlineHelpText>“City” part of the site’s address</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Costed_at_value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if inventory in this location is priced using pricebook value or priced at zero.</description>
        <inlineHelpText>Flag indicates if inventory in this location is priced using pricebook value or priced at zero.</inlineHelpText>
        <label>Costed at value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the site’s address</description>
        <inlineHelpText>“Country” part of the site’s address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Email__c</fullName>
        <description>Location Email</description>
        <inlineHelpText>Location Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__Inventory_Account__c</fullName>
        <description>Inventory account number for this location. Used for costing/accounting purposes.</description>
        <inlineHelpText>Inventory account number for this location. Used for costing/accounting purposes.</inlineHelpText>
        <label>Inventory Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsDefault_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsDelivery_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Delivery Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsGood_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Good Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartnerRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates that Location belongs to a Partner.</description>
        <inlineHelpText>Flag indicates that Location belongs to a Partner.</inlineHelpText>
        <label>Is Partner Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartner__c</fullName>
        <description>Flag indicates if location is Partner Location or not.</description>
        <formula>IF( SVMXC__IsPartnerRecord__c ,&quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag indicates if location is Partner Location or not.</inlineHelpText>
        <label>Is Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsReceiving_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Receiving Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsRepair_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Repair Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsStaging_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Staging Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account, set by trigger.</description>
        <inlineHelpText>Lookup to Partner Account.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations (Partner Account)</relationshipLabel>
        <relationshipName>Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact, set by trigger.</description>
        <inlineHelpText>Lookup to Partner Contact.</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The work order location is open or accessible for service technician during these hours of the week</description>
        <inlineHelpText>The work order location is open or accessible for service technician during these hours of the week</inlineHelpText>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Company__c</fullName>
        <description>External system unique ID of the account related to the location.</description>
        <inlineHelpText>External system unique ID of the account related to the location.</inlineHelpText>
        <label>Account (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_ID__c</fullName>
        <description>External System Unique ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External System Unique ID</inlineHelpText>
        <label>External Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Parent__c</fullName>
        <description>External system unique ID to the parent location.</description>
        <inlineHelpText>External system unique ID to the parent location.</inlineHelpText>
        <label>Parent (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the Service Engineer associated with the site.</description>
        <inlineHelpText>Name of the Service Engineer associated with the site.</inlineHelpText>
        <label>Service Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Site_Fax__c</fullName>
        <description>Main fax number for the site if available</description>
        <inlineHelpText>Main fax number for the site if available</inlineHelpText>
        <label>Site Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SVMXC__Site_Phone__c</fullName>
        <description>Main phone number for the site if available</description>
        <inlineHelpText>Main phone number for the site if available</inlineHelpText>
        <label>Site Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State/Province” part of the site’s address</description>
        <inlineHelpText>“State/Province” part of the site’s address</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Stocking_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if this is a stocking location or not. ServiceMax does not perform inventory updates on non-stocking locations.</description>
        <inlineHelpText>Flag indicates if this is a stocking location or not. ServiceMax does not perform inventory updates on non-stocking locations.</inlineHelpText>
        <label>Stocking Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the site’s address</description>
        <inlineHelpText>“Street” part of the site’s address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Web_site__c</fullName>
        <description>Website URL for the site if available. Use the company&apos;s website otherwise</description>
        <inlineHelpText>Website URL for the site if available. Use the company&apos;s website otherwise</inlineHelpText>
        <label>Web site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zip__c</fullName>
        <description>“Zip/Postal code” part of the site’s address</description>
        <inlineHelpText>“Zip/Postal code” part of the site’s address</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>SMAX_PS_First_Level_Loc</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Account__c</columns>
        <columns>SVMXC__Site_Phone__c</columns>
        <columns>SMAX_PS_Full_Location_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべての第1階層場所</label>
    </listViews>
    <listViews>
        <fullName>SMAX_PS_Second_Level_loc</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Account__c</columns>
        <columns>SVMXC__Parent__c</columns>
        <columns>SVMXC__Site_Phone__c</columns>
        <columns>SMAX_PS_Full_Location_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべての第2階層場所</label>
    </listViews>
    <listViews>
        <fullName>SVMXC__All_Locations</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Street__c</columns>
        <columns>SVMXC__City__c</columns>
        <columns>SVMXC__State__c</columns>
        <columns>SVMXC__Zip__c</columns>
        <columns>SVMXC__Country__c</columns>
        <columns>SVMXC__Latitude__c</columns>
        <columns>SVMXC__Longitude__c</columns>
        <columns>SVMXC__Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Location</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <recordTypes>
        <fullName>SVMXC__Depot</fullName>
        <active>true</active>
        <description>Depot</description>
        <label>Depot</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Inventory_Location</fullName>
        <active>true</active>
        <description>Depot Child</description>
        <label>Depot Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Inventory_Org</fullName>
        <active>true</active>
        <description>Depot Parent</description>
        <label>Depot Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Standard_Location</fullName>
        <active>true</active>
        <description>Standard Location</description>
        <label>Standard Location</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>